[project]
name = "codereview-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.3",
    "pandas-stubs==2.3.0.250703",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "tabulate>=0.9.0",
]
